<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/download"/>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:hint="@string/e_mail"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/conf_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:hint="@string/conf_pwd"
            android:inputType="textPassword"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:hint="@string/phone_no"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:paddingTop="7dp"
            android:text="Choose a security question"
            android:textColor="#d81b60"
            android:textSize="10dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:hint="Answer" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:fontFamily="@font/seasrn__"
            android:text="@string/btn_1"
            android:textSize="25dp" />
    </LinearLayout>

    </ScrollView>
</RelativeLayout>